# Performatives

./: API_README.md  DEPLOYMENT_GUIDE.md  INCOMPLETE_FEATURES.md  INTEGRATION_GUIDE.md  INTEGRATION_STRATEGY.md  README.md  REDUNDANCY_ANALYSIS.md  docker-compose.yml  package.json  start.ps1  tsconfig.json
app/: page.tsx
components/: AnalysisForm.tsx  FuturePaths.tsx  SkillGapList.tsx  SkillRadarChart.tsx  TimelineRoadmap.tsx
data/: seed-data.json
nginx/: nginx.conf
prob-3/: README.md  SOLUTION.md  index.html  package-lock.json  package.json  tsconfig.json
prob-4/: .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_STATS.md  API_DOCUMENTATION.md  ATS_API_Postman_Collection.json  AUTH_DOCUMENTATION.md  CODE_QUALITY.md  DEMO_SCRIPT.md  Dockerfile  MODELS_SUMMARY.md  Makefile  OPENAPI_ENHANCEMENTS.md  README.md  SCHEMAS_SUMMARY.md  SCREENSHOT_CHECKLIST.md  SEARCH_FILTERING.md  SOLUTION.md  STATUS_MANAGER_DOCS.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test.db-journal  test_output.txt
prob-4/alembic/: env.py
prob-4/alembic/versions/: 001_initial.py  002_create_users.py
prob-4/app/: __init__.py  database.py  main.py
prob-4/app/api/: __init__.py  applications.py  auth.py  candidates.py  jobs.py
prob-4/app/models/: __init__.py  application.py  candidate.py  job.py  status_history.py  user.py
prob-4/app/schemas/: __init__.py  application.py  candidate.py  job.py  pagination.py  stats.py  status_history.py  user.py
prob-4/app/services/: __init__.py  email_service.py  status_manager.py
prob-4/app/templates/emails/: status_generic.html  status_hired.html  status_interview_scheduled.html  status_offer_extended.html  status_rejected.html  status_screening.html
prob-4/app/utils/: __init__.py  auth.py  constants.py  dependencies.py  enums.py  exceptions.py  logging_config.py  pagination.py
prob-4/frontend/: README.md  index.html
prob-4/tests/: conftest.py  test_api_endpoints.py  test_edge_cases.py  test_models.py  test_status_validation.py
problem-1/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  FRONTEND_README.md  QUICKSTART.md  README.md  SOLUTION.md  TESTING.md  docker-compose.yml  index.html  requirements.txt
(+50 files in other folders)
